--- a/LearnCPP/LearnCPP.vcxproj
+++ b/LearnCPP/LearnCPP.vcxproj
@@ -142,6 +142,8 @@
   <ItemGroup>
     <ClCompile Include="12_08.cpp" />
     <ClCompile Include="12_09.cpp" />
+    <ClCompile Include="Class.cpp" />
+    <ClCompile Include="UniformReset.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
