--- a/LearnCPP/LearnCPP.vcxproj.filters
+++ b/LearnCPP/LearnCPP.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\12_15">
+      <UniqueIdentifier>{042b96aa-0f01-4536-a650-ccdd0ae2a17f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="12_08.cpp">
@@ -20,6 +23,12 @@
     </ClCompile>
     <ClCompile Include="12_09.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Class.cpp">
+      <Filter>소스 파일\12_15</Filter>
+    </ClCompile>
+    <ClCompile Include="UniformReset.cpp">
+      <Filter>소스 파일\12_15</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
