--- a/LearnCPP/LearnCPP.vcxproj.filters
+++ b/LearnCPP/LearnCPP.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="소스 파일\12_15">
       <UniqueIdentifier>{042b96aa-0f01-4536-a650-ccdd0ae2a17f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\12_15 EmplyeeSystem">
+      <UniqueIdentifier>{21ff067d-d1f7-43f2-8df3-53edbd16c4bd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="12_08.cpp">
@@ -30,5 +33,22 @@
     <ClCompile Include="UniformReset.cpp">
       <Filter>소스 파일\12_15</Filter>
     </ClCompile>
+    <ClCompile Include="Employee.cpp">
+      <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="EmployeeTest.cpp">
+      <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Database.cpp">
+      <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Employee.h">
+      <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Database.h">
+      <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
