--- a/LearnCPP/LearnCPP.vcxproj
+++ b/LearnCPP/LearnCPP.vcxproj
@@ -144,8 +144,8 @@
     <ClCompile Include="12_09.cpp" />
     <ClCompile Include="Class.cpp" />
     <ClCompile Include="Database.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Employee.cpp" />
-    <ClCompile Include="EmployeeTest.cpp" />
     <ClCompile Include="UniformReset.cpp" />
   </ItemGroup>
   <ItemGroup>
