--- a/LearnCPP/LearnCPP.vcxproj.filters
+++ b/LearnCPP/LearnCPP.vcxproj.filters
@@ -36,10 +36,10 @@
     <ClCompile Include="Employee.cpp">
       <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
     </ClCompile>
-    <ClCompile Include="EmployeeTest.cpp">
+    <ClCompile Include="Database.cpp">
       <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
     </ClCompile>
-    <ClCompile Include="Database.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
     </ClCompile>
   </ItemGroup>
