--- a/LearnCPP/LearnCPP.vcxproj.filters
+++ b/LearnCPP/LearnCPP.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="소스 파일\12_15 EmplyeeSystem">
       <UniqueIdentifier>{21ff067d-d1f7-43f2-8df3-53edbd16c4bd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\12_17">
+      <UniqueIdentifier>{ea1b9f91-ea72-4771-88d6-c9371bc5f19d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="12_08.cpp">
@@ -41,6 +44,12 @@
     </ClCompile>
     <ClCompile Include="Main.cpp">
       <Filter>소스 파일\12_15 EmplyeeSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="string.cpp">
+      <Filter>소스 파일\12_17</Filter>
+    </ClCompile>
+    <ClCompile Include="12_28.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
