--- a/LearnCPP/LearnCPP.vcxproj
+++ b/LearnCPP/LearnCPP.vcxproj
@@ -143,14 +143,21 @@
     <ClCompile Include="12_08.cpp" />
     <ClCompile Include="12_09.cpp" />
     <ClCompile Include="12_28.cpp" />
+    <ClCompile Include="BankingSystemVer01.cpp" />
     <ClCompile Include="Class.cpp" />
     <ClCompile Include="Database.cpp" />
+    <ClCompile Include="DefaultValue.cpp" />
+    <ClCompile Include="InlineFunc.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Employee.cpp" />
+    <ClCompile Include="NameAlias.cpp" />
+    <ClCompile Include="NameSp.cpp" />
     <ClCompile Include="stlSort_1.cpp" />
     <ClCompile Include="stlSort_2.cpp" />
     <ClCompile Include="string.cpp" />
     <ClCompile Include="UniformReset.cpp" />
+    <ClCompile Include="UsingDcl1.cpp" />
+    <ClCompile Include="UsingDcl2.cpp" />
     <ClCompile Include="병합정렬.cpp" />
     <ClCompile Include="삽입정렬.cpp" />
   </ItemGroup>
