--- a/LearnCPP/LearnCPP.vcxproj
+++ b/LearnCPP/LearnCPP.vcxproj
@@ -145,16 +145,22 @@
     <ClCompile Include="12_28.cpp" />
     <ClCompile Include="BankingSystemVer01.cpp" />
     <ClCompile Include="Class.cpp" />
+    <ClCompile Include="constRe.cpp" />
     <ClCompile Include="Database.cpp" />
+    <ClCompile Include="DataTypeBool.cpp" />
     <ClCompile Include="DefaultValue.cpp" />
     <ClCompile Include="InlineFunc.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Employee.cpp" />
     <ClCompile Include="NameAlias.cpp" />
     <ClCompile Include="NameSp.cpp" />
+    <ClCompile Include="RefArrelem.cpp" />
+    <ClCompile Include="Referen.cpp" />
+    <ClCompile Include="RefPtr.cpp" />
     <ClCompile Include="stlSort_1.cpp" />
     <ClCompile Include="stlSort_2.cpp" />
     <ClCompile Include="string.cpp" />
+    <ClCompile Include="TrueAndFalse.cpp" />
     <ClCompile Include="UniformReset.cpp" />
     <ClCompile Include="UsingDcl1.cpp" />
     <ClCompile Include="UsingDcl2.cpp" />
